// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createContentNode content body 1`] = `
Array [
  Array [
    Object {
      "body": "content",
      "children": Array [],
      "id": "nodeId",
      "internal": Object {
        "content": "{\\"id\\":\\"vwxyz\\",\\"body\\":\\"content\\"}",
        "contentDigest": "dc80de2bd37db677dea84c9626b2aef0",
        "type": "MicrocmsNews",
      },
      "newsId": "vwxyz",
      "parent": null,
      "sortIndex": 0,
    },
  ],
]
`;

exports[`createContentNode content does not have id 1`] = `
Array [
  Array [
    Object {
      "body": "content",
      "children": Array [],
      "id": "nodeId",
      "internal": Object {
        "content": "{\\"body\\":\\"content\\"}",
        "contentDigest": "067d01e67619fda073f1510f2d8811ce",
        "type": "MicrocmsBody",
      },
      "parent": null,
      "sortIndex": 0,
    },
  ],
]
`;

exports[`createContentNode content id 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "id": "nodeId",
      "internal": Object {
        "content": "{\\"id\\":\\"abcde\\"}",
        "contentDigest": "d816d8eec404705cf80f72fe03d6834f",
        "type": "MicrocmsPost",
      },
      "parent": null,
      "postId": "abcde",
      "sortIndex": 0,
    },
  ],
]
`;
